--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
+    "ali-oss": "^6.16.0",
     "core-js": "^3.6.5",
     "vant": "^2.12.37",
     "vue": "^2.6.11",
