--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ali-oss": "^6.16.0",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vant": "^2.12.37",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.3",
